apps/ms-products/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ms-products-service
  labels:
    app: ms-products
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: ms-products
