apps/ms-products/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ms-products-ingress
  labels:
    app: ms-products
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /products
        pathType: Prefix
        backend:
          service:
            name:  ms-products
            port:
              number: 80
